fixed spacings + removed black line

--- a/src/scss/_latest-stories.scss
+++ b/src/scss/_latest-stories.scss
@@ -67,10 +67,9 @@
   .latest-stories__black-line-small {
     border-bottom: 0.7em solid grey;
     opacity: 0.5;
-    padding-top: 1em;
   }
   .latest-stories__space-small {
-    padding: 0.2em;
+    padding: 0.6em;
   }
 
   .latest-stories__imgbox {
